<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Old</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="relative">亲友</string>
    <string name="story">故事</string>
    <string name="neighbourhood">邻里</string>
    <string name="week_rank">周榜</string>
    <string name="month_rank">月榜</string>
    <string name="all_rank">总榜</string>
    <!-- 网络提示 -->
    <string name="network_str">联网失败，请检查网络状态！</string>
    <!-- customdialog 通用dialog弹窗 -->
    <string name="prompt">提示</string>
    <string name="exit_app">你确定要退出应用吗?</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="dismiss">隐藏</string>
    <string name="force_load">加载中，请稍候...</string>
    <string name="download_app_str">偕老书下载</string>
    <string name="img">图片</string>

    <!-- 下拉加载更多和点击加载下一页 -->
    <!-- <string name="p2refresh_head_load_more">加载更多</string> -->
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <!--亲友-->
    <string name="login_btn_str">马上登录</string>
    <!--邻里-->
    <string name="add_address_str">马上添加</string>
    <!--故事-->
    <string name="title_public_story">发布故事</string>
    <string name="submit">提交</string>
    <string name="preview">预览</string>
    <string name="select_story">选择故事归宿</string>
    <string name="fill_title">填写小标题(可不填)</string>
    <string name="add_describe">为这组图片添加一段文字描述吧</string>
    <string name="add_chapters_sections_str">追加章节</string>
    <!--封面-->
    <string name="share">分享</string>
    <string name="give_present">赠送一段</string>
    <string name="reward">打赏</string>
    <string name="cover">封面</string>

</resources>