<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@color/white"
    android:paddingLeft="12dp"
    android:paddingRight="12dp" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@mipmap/menu" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <RadioButton
            android:id="@+id/rb_rdio1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/neighbourhood"
            android:textColor="@color/radio_group_selector_green"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_rdio2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/relative"
            android:textColor="@color/radio_group_selector_green"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_rdio3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/story"
            android:textColor="@color/radio_group_selector_green"
            android:textSize="20sp" />
    </RadioGroup>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@mipmap/search" />

</LinearLayout>