<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/title_cover" />

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/cover" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="我的兄弟姐妹"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical|top">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/tag1"
            android:layout_marginTop="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="原来的我" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@mipmap/u1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="李逵"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="425次阅读"
            android:textColor="@color/black_middle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/border_circular_five_green"
            android:text="@string/share"
            android:textColor="@color/green"
            android:textSize="18sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="1.7"
            android:background="@drawable/border_circular_five_orange"
            android:text="@string/give_present"
            android:textColor="@color/font_orange"
            android:textSize="18sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:background="@drawable/border_circular_five_red"
            android:text="@string/reward"
            android:textColor="@color/red"
            android:textSize="18sp" />
    </LinearLayout>
    <com.example.view.seekbar.FontSliderBar
        android:id="@+id/sliderbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14.33dp"
        android:layout_marginRight="10.33dp" />
</LinearLayout>